[gd_scene load_steps=3 format=2]

[ext_resource path="res://Scripts/CreateServerTab.gd" type="Script" id=1]
[ext_resource path="res://Scripts/ColorPickerButton.gd" type="Script" id=2]

[node name="CreateServerTab" type="VBoxContainer"]
margin_top = 24.0
margin_right = 340.0
margin_bottom = 260.0
rect_min_size = Vector2( 0, 100 )
custom_constants/separation = 8
script = ExtResource( 1 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ServerPortLabel" type="Label" parent="."]
margin_right = 340.0
margin_bottom = 14.0
size_flags_vertical = 1
text = "Server Port"

[node name="ServerPortInput" type="LineEdit" parent="."]
margin_top = 22.0
margin_right = 340.0
margin_bottom = 46.0

[node name="MaxPlayersLabel" type="Label" parent="."]
margin_top = 54.0
margin_right = 340.0
margin_bottom = 68.0
size_flags_vertical = 1
text = "Max Number Of Players"

[node name="MaxPlayersInput" type="LineEdit" parent="."]
margin_top = 76.0
margin_right = 340.0
margin_bottom = 100.0

[node name="ServerNameLabel" type="Label" parent="."]
margin_top = 108.0
margin_right = 340.0
margin_bottom = 122.0
size_flags_vertical = 1
text = "Server Name"

[node name="ServerNameInput" type="LineEdit" parent="."]
margin_top = 130.0
margin_right = 340.0
margin_bottom = 154.0

[node name="PlayerNameLabel" type="Label" parent="."]
margin_top = 162.0
margin_right = 340.0
margin_bottom = 176.0
text = "Player Name"

[node name="PlayerNameInput" type="LineEdit" parent="."]
margin_top = 184.0
margin_right = 340.0
margin_bottom = 208.0

[node name="ColorLabel" type="Label" parent="."]
margin_top = 216.0
margin_right = 340.0
margin_bottom = 230.0
text = "Player Color"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="ColorPickerButton" type="ColorPickerButton" parent="."]
margin_top = 238.0
margin_right = 340.0
margin_bottom = 258.0
script = ExtResource( 2 )

[node name="CreateButton" type="Button" parent="."]
margin_top = 266.0
margin_right = 340.0
margin_bottom = 286.0
text = "Start Server"
[connection signal="pressed" from="CreateButton" to="." method="_on_CreateButton_pressed"]
